# device_soc_unisoc

./: .gitattributes  OAT.xml  README.OpenSource  README.md  README_EN.md
p7885/hardware/audio/: BUILD.gn
p7885/hardware/audio/param/: audio_structure  cvs  dsp_smartamp  dsp_vbc
p7885/hardware/audio/src/: audio_param.c  voice_param.c
p7885/hardware/bluetooth/: BUILD.gn
p7885/hardware/bluetooth/lib64/: libbt_vendor.tar.gz.gpg
p7885/hardware/camera_unisoc/soc_p7885/camera_hal/: BUILD.gn
p7885/hardware/camera_unisoc/soc_p7885/etc/: BUILD.gn  camera_property.ini  sensor_config.xml
p7885/hardware/camera_unisoc/soc_p7885/isp_lib/: BUILD.gn  isp_lib.tar.gz.gpg
p7885/hardware/camera_unisoc/soc_p7885/tuning/gc05a2_f/: BUILD.gn  GN_autoGen.sh  cfg.xml
p7885/hardware/camera_unisoc/soc_p7885/tuning/gc08a3/: BUILD.gn  cfg.xml  driver_info.xml  isp_nr.h  postproc_cfg.xml  sensor_0_raw_param_cap_0.c  sensor_0_raw_param_cap_1.c  sensor_0_raw_param_main.c  sensor_0_raw_param_prv_0.c  sensor_0_raw_param_prv_1.c  sensor_0_raw_param_video_0.c  sensor_0_raw_param_video_1.c
p7885/hardware/display/: BUILD.gn
p7885/hardware/display/include/: display_adapter_interface.h  display_common.h  display_gfx.h  display_gralloc_private.h
p7885/hardware/display/src/display_device/composer/: hdi_composer.cpp  hdi_composer.h  hdi_gfx_composition.cpp  hdi_gfx_composition.h
p7885/hardware/display/src/display_device/core/: display_composer_vdi_impl.cpp  display_composer_vdi_impl.h  hdi_device_common.h  hdi_display.cpp  hdi_display.h  hdi_fd.h  hdi_layer.cpp  hdi_layer.h  hdi_netlink_monitor.cpp  hdi_netlink_monitor.h  hdi_session.cpp  hdi_session.h
p7885/hardware/display/src/display_device/drm/: drm_connector.cpp  drm_connector.h  drm_crtc.cpp  drm_crtc.h  drm_device.cpp  drm_device.h  drm_display.cpp  drm_display.h  drm_encoder.cpp  (+9 more)
p7885/hardware/display/src/display_gfx/: display_gfx.cpp
p7885/hardware/display/src/display_gralloc/: allocator.cpp  allocator.h  allocator_manager.cpp  display_buffer_vdi_impl.cpp  display_buffer_vdi_impl.h  display_gralloc.cpp  dmabufferheap_allocator.cpp  dmabufferheap_allocator.h  drm_allocator.cpp  drm_allocator.h  framebuffer_allocator.cpp  framebuffer_allocator.h  sprd_allocator.cpp  sprd_allocator.h
p7885/hardware/display/src/utils/: display_adapter.cpp  display_adapter.h  display_module_loader.h
p7885/hardware/gpu/: BUILD.gn
p7885/hardware/location/: BUILD.gn
p7885/hardware/location/etc/: config.xml  locationsa-7885.cfg  prop.ini  supl.xml
p7885/hardware/location/gnss/: BUILD.gn  vendorGnssAdapter.cpp  vendorGnssAdapter.h
p7885/hardware/location/test/: BUILD.gn  gnss_test_sprd.cpp  gnss_test_sprd.h
p7885/hardware/modem/telephony/: BUILD.gn  Readme
p7885/hardware/npu/: BUILD.gn
p7885/hardware/npu/core/: .gitattributes
p7885/hardware/npu/etc/: npu_img_hwconfig.json  npu_img_mapconfig.json
p7885/hardware/npu/include/: IUniAI.h
p7885/hardware/npu/lib64/: .gitattributes
p7885/hardware/npu/nnrt/: BUILD.gn  nnrt_device_vdi_impl.cpp  prepared_model_impl_2_0.cpp
p7885/hardware/npu/nnrt/include/: innrt_device_vdi.h  nnrt_common.h  prepared_model_impl_2_0.h
p7885/hardware/npu/nnrt/test/: BUILD.gn
p7885/hardware/npu/nnrt_drivers/v2_0/: BUILD.gn
p7885/hardware/omx_il/: BUILD.gn  sprd_omx.gni
p7885/hardware/omx_il/components/: BUILD.gn
p7885/hardware/omx_il/core/: BUILD.gn  sprd_omx_core.cpp  sprd_omx_core.h  sprd_omx_core_impl.h
p7885/hardware/omx_il/libstagefrighthw/: BUILD.gn  SprdOMXComponent.cpp  SprdSimpleOMXComponent.cpp  SprdVideoDecoderBase.cpp  SprdVideoDecoderOMXComponent.cpp  SprdVideoEncoderBase.cpp  SprdVideoEncoderOMXComponent.cpp
p7885/hardware/omx_il/libstagefrighthw/include/: Dynamic_buffer.h  SprdOMXComponent.h  SprdOMXComponentBase.h  SprdSimpleOMXComponent.h  SprdVideoDecoderBase.h  SprdVideoDecoderOMXComponent.h  SprdVideoEncoderBase.h  SprdVideoEncoderOMXComponent.h  SprdVideoEncoderUtils.h
p7885/hardware/omx_il/libutils/: BUILD.gn  Looper.cpp  Message.cpp  SprdOMXUtils.cpp  XThread.cpp  time_util.cpp
p7885/hardware/wcn/: BUILD.gn  bt_configure_pskey.ini  bt_configure_rf.ini  bt_configure_rf_aa.ini  wifi_board_config.ini
p7885/modules/: BUILD.gn  modules.tar.gz.gpg
p7885/modules/audio/: agdsp_pd.ko  audio-dsp-dump.ko  audio-pipe.ko  audio_mem.ko  audio_sipc.ko  mcdt_hw_r2p0.ko  smp_aw87xxx.ko  snd-soc-sprd-card.ko  snd-soc-sprd-codec-ump9620-power-dev.ko  snd-soc-sprd-codec-ump9620-power.ko  snd-soc-sprd-codec-ump9620.ko  snd-soc-sprd-dai.ko  snd-soc-sprd-dummy-codec.ko  snd-soc-sprd-pa-ucp1301.ko  snd-soc-sprd-pdm-r2p0.ko  snd-soc-sprd-tdm.ko  snd-soc-sprd-vbc-fe.ko  snd-soc-sprd-vbc-v4.ko  snd-soc-unisoc-dp-codec.ko  sprd-compr-2stage-dma.ko  sprd-dmaengine-pcm.ko  sprd-platform-pcm-routing.ko  sprd_apipe.ko  sprd_audcp_boot.ko  sprd_audcp_dvfs.ko  sprd_audio_usb_offload.ko  voice_trigger_irq.ko
p7885/modules/input/touchscreen/: gslx680.ko
p7885/modules/vpu/: vpu.ko
p7885/modules/ws73/: plat_soc.ko  sle_client_sample  sle_server_sample  sle_soc.ko  ws73_cfg.ini
p7885/pac/: BUILD.gn  encrypt.sh
p7885/pac/ImageFiles/: boot.img  dtbo.img  flash.cfg  flash_secboot.cfg  logo.bin(1)  prodnv.img  uboot.tar.gz.gpg  uis7885_2h10.xml  uis7885_2h10_secboot.xml  vendor_boot.img  vendor_boot_sec.img
p7885/pac/ImageFiles/Script/: mkpac.pl
p7885/unisoc_wrapper/: BUILD.gn  unisoc_wrapper.gni
p7885/unisoc_wrapper/hardware/libhardware/: BUILD.gn
p7885/unisoc_wrapper/system/core/libcutils/: BUILD.gn
p7885/unisoc_wrapper/system/core/libgrallocusage/: BUILD.gn
p7885/unisoc_wrapper/system/core/libsync/: BUILD.gn
p7885/unisoc_wrapper/system/core/libutils/: BUILD.gn
p7885/unisoc_wrapper/system/libbase/: BUILD.gn
p7885/unisoc_wrapper/system/libhidl/: BUILD.gn
p7885/unisoc_wrapper/system/libhwbinder/: BUILD.gn
p7885/unisoc_wrapper/system/memory/libdmabufheap/: BUILD.gn
p7885/unisoc_wrapper/system/memory/libion/: BUILD.gn
p7885/unisoc_wrapper/system/memory/libmemion/: BUILD.gn
p7885/unisoc_wrapper/system/memory/libvideosharememory/: BUILD.gn
p7885/unisoc_wrapper/wrapper/: BUILD.gn
(+252 files in other folders)
