# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//device/soc/unisoc/p7885/soc_common.gni")
uboot_image_dir = "//device/soc/unisoc/p7885/pac/ImageFiles"

group("pac") {
  deps = [
    ":encrypt_uboot_image",
  ]
}

action("encrypt_uboot_image") {
  script = "encrypt.sh"
  outputs = [ 
    "$target_out_dir/packages/phone/images/", 
  ]
  args = [ 
    rebase_path("$uboot_image_dir/uboot.tar.gz.gpg"),
    rebase_path("$uboot_image_dir"),
  ]
}
