# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
 

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//device/soc/unisoc/p7885/soc_common.gni")

action("decrypt_bluetooth") {
  inputs = [
    "//device/soc/unisoc/p7885/hardware/bluetooth/lib64/libbt_vendor.tar.gz.gpg",
  ]
  outputs = [
    "$target_out_dir/lib64/libbt_vendor.z.so",
  ]
  script = "//device/soc/unisoc/p7885/pac/encrypt.sh"
  args = [
    rebase_path("//device/soc/unisoc/p7885/hardware/bluetooth/lib64/libbt_vendor.tar.gz.gpg", root_build_dir),
    rebase_path("$target_out_dir/lib64", root_build_dir),
  ]
}

ohos_prebuilt_executable("libbt_vendor") {
  deps = [ ":decrypt_bluetooth" ]
  source = "$target_out_dir/lib64/libbt_vendor.z.so"
  install_enable = true
  install_images = [ chipset_base_dir ]
  module_install_dir = "lib64"
  subsystem_name = "${SUBSYSTEM_NAME}"
  part_name = "${PART_NAME}"
}

group("bluetooth_group") {
  deps = [
    ":decrypt_bluetooth",
    ":libbt_vendor",
  ]
}
